<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context="com.example.android.summertreecafe.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_image"
            android:contentDescription="@string/content_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/coffee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/layout_margin_bottom"
                android:fontFamily="sans-serif-light"
                android:text="@string/business_name"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/color_business_name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_bottom"
                android:fontFamily="sans-serif-medium"
                android:text="@string/business_description"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/color_business_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_bottom">

                <TextView
                    android:layout_width="@dimen/layout_width_day"
                    android:layout_height="wrap_content"
                    android:text="@string/days_sat_mon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/hours_sat_mon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_bottom">

                <TextView
                    android:layout_width="@dimen/layout_width_day"
                    android:layout_height="wrap_content"
                    android:text="@string/days_tue_fri" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours_tue_fri" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_desc_location"
                    android:src="@drawable/ic_location_on_black_24dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/layout_margin_left"
                    android:autoLink="map"
                    android:fontFamily="sans-serif"
                    android:text="@string/address"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_phone"
                    android:src="@drawable/ic_call_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/layout_margin_left"
                    android:autoLink="phone"
                    android:fontFamily="sans-serif"
                    android:text="@string/phone_number"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_bottom">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_web"
                    android:src="@drawable/ic_public_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/layout_margin_left"
                    android:autoLink="web"
                    android:fontFamily="sans-serif"
                    android:text="@string/website"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
